    DHCP configuration when a link is slow to become available.
    Thanks to Ferenc Wagner for the patch.
  * Clarify the requirements for hostnames.  Closes: #399071.
  * Modify ethtool-lite so that it distinguishes between "ethtool failed"
    and "ethtool says link is down".  This should reduce link up/link down
    confusion.  Closes: #496647.

 -- Matt Palmer <mpalmer@debian.org>  Fri, 21 Jan 2011 12:44:21 +1100

netcfg (1.59) unstable; urgency=low

  [ Matt Palmer ]
  * Modify the DHCP configuration process to write out elements of
    resolv.conf that the user has entered manually, because the DHCP server
    didn't supply them.  Closes: #362029.
  * Add an ethtool-lite Makefile target, to assist people in building a
    standalone ethtool-lite for debugging purposes.  Closes: #608452.

  [ Updated translations ]
  * Northern Sami (se.po) by Børre Gaup

 -- Otavio Salvador <otavio@ossystems.com.br>  Sun, 02 Jan 2011 14:29:22 -0200

netcfg (1.58) unstable; urgency=low

  [ Updated translations ]
  * Lao (lo.po) by Anousak Souphavanh
  * Northern Sami (se.po) by Børre Gaup
  * Sinhala (si.po) by Danishka Navin

 -- Otavio Salvador <otavio@debian.org>  Fri, 24 Dec 2010 20:06:41 -0200

netcfg (1.57) unstable; urgency=low

  [ Otavio Salvador ]
  * Don't duplicate localhost definition for IPv4 and IPv6. Closes:
    #595107.

  [ Petter Reinholdtsen ]
  * Log detected link status to make it possible to see if link
    detection work properly or not.

  [ Otavio Salvador ]
  * netcfg: do not provide an empty /etc/dhcp3 dir.

  [ Updated translations ]
  * Bengali (bn.po) by Israt Jahan
  * Catalan (ca.po) by Jordi Mallach
  * Danish (da.po) by Anders Jenbo
  * Persian (fa.po) by Behrad Eslamifar
  * Icelandic (is.po) by Sveinn  Felli
  * Kazakh (kk.po) by Baurzhan Muftakhidinov
  * Romanian (ro.po) by Andrei Popescu

 -- Otavio Salvador <otavio@debian.org>  Fri, 12 Nov 2010 14:27:38 -0200

netcfg (1.56) unstable; urgency=low

  [ Aurelien Jarno ]