@@ -26,7 +26,7 @@ endif
 
 all: $(TARGETS)
 
-netcfg-static: netcfg-static.o static.o
+netcfg-static: netcfg-static.o static.o ethtool-lite.o
 netcfg: netcfg.o dhcp.o static.o ethtool-lite.o
 
 ethtool-lite: ethtool-lite-test.o
