@@ -8,8 +8,11 @@ netcfg (1.60) UNRELEASED; urgency=low
   * Modify ethtool-lite so that it distinguishes between "ethtool failed"
     and "ethtool says link is down".  This should reduce link up/link down
     confusion.  Closes: #496647.
+  * Wait for up to 3 seconds (in 0.25s increments) looking for the link on
+    an interface.  Add a progress bar to show the progress of this
+    operation.  Closes: #414117.
 
- -- Matt Palmer <mpalmer@debian.org>  Fri, 21 Jan 2011 12:44:21 +1100
+ -- Matt Palmer <mpalmer@debian.org>  Sat, 22 Jan 2011 10:34:25 +1100
 
 netcfg (1.59) unstable; urgency=low
 
